# drf-enterprise-information-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  docker-compose.yml  docker-up.sh  manage.py  phase1_plan.md  pyproject.toml
.github/workflows/: ci.yml
apps/authentication/: README.md  models.py  permissions.json  serializers.py  views.py
apps/iam_auth/: README.md  apps.py  ip_filter.py  lockout.py  models.py  serializers.py  signals.py  tenant_settings.json  throttling.py  urls.py  views.py
apps/iam_roles/: README.md  apps.py  models.py  permissions.json  serializers.py  urls.py  views.py
apps/iam_teams/: README.md  __init__.py  apps.py  models.py  permissions.json  serializers.py  urls.py  views.py
apps/iam_users/: README.md  apps.py  models.py  permissions.json  serializers.py  services.py  urls.py  views.py
apps/sys_audit/: README.md  apps.py  models.py  plugins.py  services.py
apps/sys_health/: README.md  apps.py  urls.py  views.py
apps/sys_permissions/: README.md  apps.py  catalog.py  permissions.py  permissions_schema.json
apps/sys_user_event/: README.md  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/tenant_settings/: README.md  apps.py  catalog.py  catalog_schema.json  serializers.py  urls.py  views.py
apps/tenants/: README.md  apps.py  authentication.py  filters.py  managers.py  middleware.py  models.py  permissions.json  permissions.py  plugins.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/users/: README.md  models.py  permissions.json
config/: urls.py
config/settings/: base.py  dev.py  prod.py  test.py
core/: README.md
core/base/: README.md  commands.py  context.py  models.py  plugins.py  serializers.py  views.py
core/exceptions/: api.py  handler.py
core/fields/: README.md  __init__.py  related.py
core/filters/: README.md  __init__.py  base.py
core/openapi/: __init__.py
core/pagination/: page.py
core/permissions/: base.py
core/renderers/: __init__.py
docs/: api-conventions.md  architecture.md  c4-context.md  ci.md  code-style.md  data-model.md  deployment.md  development.md  error-codes.md  security.md  testing.md  vision.md
tests/: __init__.py  base.py  conftest.py
(+112 files in other folders)
